Update fromgit.java